errors corrected in moveit

--- a/Documentation/01_Robot arm setup.ipynb
+++ b/Documentation/01_Robot arm setup.ipynb
@@ -23,8 +23,8 @@
     "\n",
     "We have to:\n",
     "- create the arm_kinematic_ws\n",
-    "- install the package \"franka_description\"\n",
-    "- create a moveit_config package for panda robot arm"
+    "- install the package for robot_arm_description\n",
+    "- create the corresponding moveit_config package"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -48,6 +48,20 @@
     "sudo apt-get update\n",
     "sudo apt install ros-melodic-moveit"
    ]
+  },
+  {
+   "source": [
+    "#### Documentation\n",
+    "Interesting links are:\n",
+    "- ROS Tutorial: Create an arm on a mobile robot using Moveit!: https://www.youtube.com/watch?v=l4dtSRvlAjg\n",
+    "- Control any Robotic Arm with ROS: https://blog.usejournal.com/control-any-robotic-arm-with-ros-b10a3115306c\n",
+    "- Udemy course: https://www.udemy.com/course/robotics-with-ros-build-robotic-arm-in-gazebo-and-moveit/\n",
+    "- How to control a robot arm with the Arduino and ROS: https://maker.pro/arduino/tutorial/how-to-control-a-robot-arm-with-ros-and-arduino\n",
+    "- Moveit tutorials: http://docs.ros.org/en/melodic/api/moveit_tutorials/html/index.html\n",
+    "- Moveit Setup Assistant Tutorial: http://docs.ros.org/en/melodic/api/moveit_tutorials/html/doc/setup_assistant/setup_assistant_tutorial.html"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
@@ -129,7 +143,14 @@
     "\n",
     "http://docs.ros.org/en/melodic/api/moveit_tutorials/html/doc/setup_assistant/setup_assistant_tutorial.html\n",
     "\n",
-    "You have now the panda_moveit_config package properly installed"
+    "You have now the panda_moveit_config package properly installed\n",
+    "\n",
+    "Carefully:\n",
+    "- add the links and joints \"Planning groups\"\n",
+    "- add the urdf file generated in the robots folder\n",
+    "You need some modifications to this package:\n",
+    "- add the created urdf file in robots folder\n",
+    "- change the gazebo.launch file"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -152,6 +173,50 @@
    "source": [
     "roslaunch panda_moveit_config demo.launch rviz_tutorial:=true"
    ]
+  },
+  {
+   "source": [
+    "Some important configuration parameters:\n",
+    "- In Context Motion Planning Menu: Planning Library OMPL select RTTConnect\n",
+    "- In Planning Request: Interactive marker size to 0,3\n",
+    "- Select \"Allow External Communication to use a joystick"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "<img src=\"./Images/1_panda_kine_rviz1.png\">"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roslaunch gazebo_ros empty_world.launch paused:=true use_sim_time:=false gui:=true throttled:=false recording:=false debug:=true"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rosrun gazebo_ros spawn_model -file /media/sf_github_manelpuig/arm_kinematics_ws/src/franka_description/robots/panda_arm.urdf -urdf -x 0 -y 0 -z 0 -model panda"
+   ]
+  },
+  {
+   "source": [
+    "Change the gazebo.launch file considering:\n",
+    "- urdf path to the urdf file and not the xacro file\n",
+    "- the model has to be changed to panda (not robot as defauld)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
