--- a/Documentation/01_Robot arm setup.ipynb
+++ b/Documentation/01_Robot arm setup.ipynb
@@ -19,12 +19,13 @@
  "cells": [
   {
    "source": [
-    "# Setup Robot arm kinematics workspace\n",
+    "# Control any Robotic Arm with ROS\n",
+    " If you wanted to develop a robot, you had to build a complete system: a physical device, of course, but also the control systems, interface, and inspection tools required to get the robot up and running as a test platform.\n",
     "\n",
     "We have to:\n",
-    "- create the arm_kinematic_ws\n",
-    "- install the package for robot_arm_description\n",
-    "- create the corresponding moveit_config package"
+    "- Create the Robot arm model\n",
+    "- Import the Robot arm model in ROS\n",
+    "- Control the kinematics "
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -58,30 +59,52 @@
     "- Udemy course: https://www.udemy.com/course/robotics-with-ros-build-robotic-arm-in-gazebo-and-moveit/\n",
     "- How to control a robot arm with the Arduino and ROS: https://maker.pro/arduino/tutorial/how-to-control-a-robot-arm-with-ros-and-arduino\n",
     "- Moveit tutorials: http://docs.ros.org/en/melodic/api/moveit_tutorials/html/index.html\n",
-    "- Moveit Setup Assistant Tutorial: http://docs.ros.org/en/melodic/api/moveit_tutorials/html/doc/setup_assistant/setup_assistant_tutorial.html"
+    "- Moveit Setup Assistant Tutorial: http://docs.ros.org/en/melodic/api/moveit_tutorials/html/doc/setup_assistant/setup_assistant_tutorial.html\n",
+    "\n",
+    "Public repositories in:\n",
+    "- https://bitbucket.org/theconstructcore/\n",
+    "- https://bitbucket.org/theconstructcore/my-robotic-manipulator/src/master/\n",
+    "- https://bitbucket.org/theconstructcore/two-wheeled-robot-motion-planning/src/master/\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
-    "## Create the arm_kinematic_ws\n",
+    "## Create the Robot arm model\n",
     "\n",
-    "Create a \"arm_kinematics_ws\" where we will install the packages:\n",
-    "- robot_description: here Franka panda robot arm for this tutorial\n",
-    "- moveit_config: linked to the robot arm model for kinematics programming\n",
+    "First of all, we create a \"arm_kinematics_ws\" where we will install the packages:\n",
+    "- robot_description package: obtained from SolidWorks plugin\n",
+    "- robot kinematics control package: the moveit_config package\n",
     "\n",
     "Create a new repository \"arm_kinematics_ws\" in your github\n",
     "\n",
     "Syncronise the repository in your local computer\n",
     "\n",
-    "create the src folder and compile the workspace"
+    "create the src folder and compile the workspace\n",
+    "\n",
+    "### Design a 3D robot arm model with SolidWorks\n",
+    "We can make use of any robot arm design files available on the internet in CAD neutral format (such as STL). Alternatively, one can design it from scratch using any of the popular CAD software packages such as SolidWorks.\n",
+    "\n",
+    "ROS and MoveIt however, require our files to be in URDF. The Unified Robotic Description Format (URDF) is an XML file format used in ROS to describe all elements of a robot. It lists all the kinematic properties of the links and joints in a chain from base to tip. ROS also accepts .xacro files which are very similar to urdf and are easier to write.\n",
+    "\n",
+    "Fortunately, due to a few talented ROS developers, there exists a convenient plugin in Solidworks to export our assembly in URDF format.\n",
+    "\n",
+    "### Generate URDF model file from SolidWorks\n",
+    "Assuming you have your model completely set up as a SolidWorks assembly, we now use the SolidWorks to URDF Exporter: http://wiki.ros.org/sw_urdf_exporter\n",
+    "\n",
+    "Follow the tutorial to obtain the URDF file: https://blog.usejournal.com/control-any-robotic-arm-with-ros-b10a3115306c\n",
+    "\n",
+    "The built package will contain directories for meshes, textures and robots. It will also contain a ROS package.xml (manifest) file so you can use this as a ROS package by just copying it to your ROS system. The path locations in the URDF are relative to the package itself. Use proper ROS package names to avoid errors.\n",
+    "\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
+    "## Import the Robot arm model in ROS\n",
+    "\n",
     "## Install robot_description package\n",
     "\n",
     "For this tutorial, make sure you have the Franka description package for Melodic:"
