--- a/Documentation/01_Robot arm setup.ipynb
+++ b/Documentation/01_Robot arm setup.ipynb
@@ -32,7 +32,11 @@
   },
   {
    "source": [
-    "First of all we need to install the moveit package.\n",
+    "### Install some packages\n",
+    "\n",
+    "First of all we need to install:\n",
+    "- urdf tutorial package\n",
+    "- the moveit package.\n",
     "\n",
     "The simplest way to install MoveIt is from pre-built binaries (Debian):"
    ],
@@ -47,6 +51,8 @@
    "source": [
     "rosdep update\n",
     "sudo apt-get update\n",
+    "sudo apt-get install python3\n",
+    "sudo apt-get install ros-melodic-urdf-tutorial\n",
     "sudo apt install ros-melodic-moveit"
    ]
   },
@@ -57,6 +63,7 @@
     "- ROS Tutorial: Create an arm on a mobile robot using Moveit!: https://www.youtube.com/watch?v=l4dtSRvlAjg\n",
     "- Control any Robotic Arm with ROS: https://blog.usejournal.com/control-any-robotic-arm-with-ros-b10a3115306c\n",
     "- Udemy course: https://www.udemy.com/course/robotics-with-ros-build-robotic-arm-in-gazebo-and-moveit/\n",
+    "- Udemy course repository: https://github.com/noshluk2/4_Robotic-Arm-Manupilation-using-Gazbo-and-Moveit\n",
     "- How to control a robot arm with the Arduino and ROS: https://maker.pro/arduino/tutorial/how-to-control-a-robot-arm-with-ros-and-arduino\n",
     "- Moveit tutorials: http://docs.ros.org/en/melodic/api/moveit_tutorials/html/index.html\n",
     "- Moveit Setup Assistant Tutorial: http://docs.ros.org/en/melodic/api/moveit_tutorials/html/doc/setup_assistant/setup_assistant_tutorial.html\n",
@@ -74,29 +81,57 @@
     "## Create the Robot arm model\n",
     "\n",
     "First of all, we create a \"arm_kinematics_ws\" where we will install the packages:\n",
-    "- robot_description package: obtained from SolidWorks plugin\n",
+    "- robot_description package: where the URDF model of robotic arm is located. This URDF file is created from scratch or obtained from a SolidWorks plugin\n",
     "- robot kinematics control package: the moveit_config package\n",
     "\n",
     "Create a new repository \"arm_kinematics_ws\" in your github\n",
     "\n",
     "Syncronise the repository in your local computer\n",
     "\n",
-    "create the src folder and compile the workspace\n",
+    "Create the src folder and compile the workspace"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Design a 3D robot arm model from scratch\n",
     "\n",
-    "### Design a 3D robot arm model with SolidWorks\n",
+    "ROS and MoveIt require our robotic arm model files to be in URDF. The Unified Robotic Description Format (URDF) is an XML file format used in ROS to describe all elements of a robot. It lists all the kinematic properties of the links and joints in a chain from base to tip. ROS also accepts .xacro files which are very similar to urdf and are easier to write.\n",
+    "\n",
     "We can make use of any robot arm design files available on the internet in CAD neutral format (such as STL). Alternatively, one can design it from scratch using any of the popular CAD software packages such as SolidWorks.\n",
     "\n",
-    "ROS and MoveIt however, require our files to be in URDF. The Unified Robotic Description Format (URDF) is an XML file format used in ROS to describe all elements of a robot. It lists all the kinematic properties of the links and joints in a chain from base to tip. ROS also accepts .xacro files which are very similar to urdf and are easier to write.\n",
-    "\n",
+    "First of all you need to create a new package for robot description"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catkin_create_pkg my_robot_description rospy roscpp std_msgs"
+   ]
+  },
+  {
+   "source": [
+    "Create \"urdf\" and \"launch\" folders inside the new created package"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Generate URDF model file from SolidWorks\n",
     "Fortunately, due to a few talented ROS developers, there exists a convenient plugin in Solidworks to export our assembly in URDF format.\n",
     "\n",
-    "### Generate URDF model file from SolidWorks\n",
     "Assuming you have your model completely set up as a SolidWorks assembly, we now use the SolidWorks to URDF Exporter: http://wiki.ros.org/sw_urdf_exporter\n",
     "\n",
     "Follow the tutorial to obtain the URDF file: https://blog.usejournal.com/control-any-robotic-arm-with-ros-b10a3115306c\n",
     "\n",
-    "The built package will contain directories for meshes, textures and robots. It will also contain a ROS package.xml (manifest) file so you can use this as a ROS package by just copying it to your ROS system. The path locations in the URDF are relative to the package itself. Use proper ROS package names to avoid errors.\n",
-    "\n"
+    "The built package will contain directories for meshes, textures and robots. It will also contain a ROS package.xml (manifest) file so you can use this as a ROS package by just copying it to your ROS system. The path locations in the URDF are relative to the package itself. Use proper ROS package names to avoid errors."
    ],
    "cell_type": "markdown",
    "metadata": {}
