--- a/Documentation/01_Robot arm setup.ipynb
+++ b/Documentation/01_Robot arm setup.ipynb
@@ -112,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "catkin_create_pkg my_robot_description rospy roscpp std_msgs"
+    "catkin_create_pkg custom_robotic_arm rospy std_msgs"
    ]
   },
   {
