--- a/Documentation/01_Robot arm setup.ipynb
+++ b/Documentation/01_Robot arm setup.ipynb
@@ -95,13 +95,15 @@
   },
   {
    "source": [
-    "### Design a 3D robot arm model from scratch\n",
+    "### Design a 3D simple robot arm model from scratch\n",
     "\n",
-    "ROS and MoveIt require our robotic arm model files to be in URDF. The Unified Robotic Description Format (URDF) is an XML file format used in ROS to describe all elements of a robot. It lists all the kinematic properties of the links and joints in a chain from base to tip. ROS also accepts .xacro files which are very similar to urdf and are easier to write.\n",
+    "ROS and MoveIt require our robotic arm model files to be in URDF. The Unified Robotic Description Format (URDF) is an XML file format used in ROS to describe all elements of a robot. It lists all the kinematic properties of the links and joints in a chain from base to tip. And we are going to visualize each step on RViz. ROS also accepts .xacro files which are very similar to urdf and are easier to write.\n",
     "\n",
     "We can make use of any robot arm design files available on the internet in CAD neutral format (such as STL). Alternatively, one can design it from scratch using any of the popular CAD software packages such as SolidWorks.\n",
     "\n",
-    "First of all you need to create a new package for robot description"
+    "For any robotic arm we will have a number of frames that are attach to a robotic arm. After defining the joints, we need to known an important concept, Parent and Child. The different joints are connected between links. The first joint will be the Parent, and the second joint that is connected to this one is the Child. The one which gives access to the origin is the Parent. \n",
+    "\n",
+    "First of all you need to create a new package for robot description. The package is called \"custom_robotic_arm\". "
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -117,8 +119,113 @@
   },
   {
    "source": [
-    "Create \"urdf\" and \"launch\" folders inside the new created package"
+    "Using Visual Studio Code, we are going to create \"urdf\" and \"launch\" folders inside the new created package. \n",
+    "In the \"urdf\" folder, we create a file named \"simple_arm.urdf\", where we are going to describe all the elements of the robot. Now, we program it and we start with the version of excelence and defining the name of the robot. Below, is the code with the things mentioned above and one fixed link and its joint, and also another one with a continuous joint. \n",
+    "\n"
    ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "<!-- Defining the version and the name of the robot -->\n",
+    "<?xml version=\"1.0\"?>\n",
+    "<robot name=\"luqman_bot\">\n",
+    "<!-- First connection to the base link-->\n",
+    "  <link name=\"world\"/>\n",
+    "    <link name=\"base_link\">\n",
+    "        <visual>\n",
+    "        <!-- Geometry and material of the baselink -->\n",
+    "            <geometry>\n",
+    "                <cylinder length=\"0.05\" radius=\"0.1\"/>\n",
+    "            </geometry>\n",
+    "            <material name=\"silver\">\n",
+    "                <color rgba=\"0.75 0.75 0.75 1\"/>\n",
+    "            </material>\n",
+    "            <!-- Location of the base link -->\n",
+    "            <origin rpy=\"0 0 0\" xyz=\"0 0 0.025\"/>\n",
+    "        </visual>\n",
+    "    <!-- Definition of the collision properties -->\n",
+    "    <collision>\n",
+    "        <geometry>\n",
+    "            <cylinder length=\"0.05\" radius=\"0.1\"/>\n",
+    "        </geometry>\n",
+    "            <origin rpy=\"0 0 0\" xyz=\"0 0 0.025\"/>\n",
+    "    </collision>\n",
+    "    <!-- Definition of the intertial properties -->\n",
+    "    <!-- It defines the properties that will act if there is a collision -->\n",
+    "    <inertial>\n",
+    "        <mass value=\"1.0\"/>\n",
+    "        <origin rpy=\"0 0 0\" xyz=\"0 0 0.025\"/>\n",
+    "        <inertia ixx=\"0.0027\" iyy=\"0.0027\" izz=\"0.005\" ixy=\"0\" ixz=\"0\" iyz=\"0\"/>\n",
+    "    </inertial>\n",
+    "    </link>\n",
+    "<!-- Definition of the joint for the link created -->\n",
+    "<!-- This is a fixed link, it is not going to move -->\n",
+    "<!-- Defining the connection between the world and the base link, with a fixed joint -->\n",
+    "  <joint name=\"fixed\" type=\"fixed\">\n",
+    "    <parent link=\"world\"/>\n",
+    "    <child link=\"base_link\"/>\n",
+    "  </joint>\n",
+    "\n",
+    "<!-- New link connected to the base one, with a joing that will move -->\n",
+    "<!-- Definition of the geometry and the mechanical properties -->\n",
+    "  <link name=\"One\">\n",
+    "    <visual>\n",
+    "        <geometry>\n",
+    "            <cylinder length=\"0.5\" radius=\"0.05\"/>\n",
+    "        </geometry>\n",
+    "        <material name=\"silver\">\n",
+    "            <color rgba=\"0.75 0.75 0.75 1\"/>\n",
+    "        </material>\n",
+    "        <origin rpy=\"0 0 0\" xyz=\"0 0 0.25\"/>\n",
+    "    </visual>\n",
+    "    <collision>\n",
+    "        <geometry>\n",
+    "            <cylinder length=\"0.5\" radius=\"0.05\"/>\n",
+    "        </geometry>\n",
+    "        <origin rpy=\"0 0 0\" xyz=\"0 0 0.25\"/>\n",
+    "    </collision>\n",
+    "    <inertial>\n",
+    "        <mass value=\"1.0\"/>\n",
+    "        <origin rpy=\"0 0 0\" xyz=\"0 0 0.25\"/>\n",
+    "        <inertia ixx=\"0.02146\" iyy=\"0.02146\" izz=\"0.00125\"\n",
+    "        ixy=\"0\" ixz=\"0\" iyz=\"0\"/>\n",
+    "    </inertial>\n",
+    "  </link>\n",
+    "  <!-- Defining a continuous joint, which can rotate  -->\n",
+    "  <!-- In this case, we have to define the axis and origin -->\n",
+    "  <joint name=\"One_joint\" type=\"continuous\">\n",
+    "    <axis xyz=\"0 0 1\"/>\n",
+    "    <parent link=\"base_link\"/>\n",
+    "    <child link=\"One\"/>\n",
+    "    <origin rpy=\"0 0 0\" xyz=\"0.0 0.0 0.05\"/>\n",
+    "  </joint>"
+   ]
+  },
+  {
+   "source": [
+    "We can repeat this step, as many times as links and joints we want our robot to have. In this case, as it is a simple arm, it is going to have four joints and links. \n",
+    "To observe the evolution of the robot, we use RViz with the following command on the terminal.  "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roslaunch urdf_tutorial display.launch model:='$(find custom_robotic_arm)/urdf/simple_arm.urdf'"
+   ]
+  },
+  {
+   "source": [],
    "cell_type": "markdown",
    "metadata": {}
   },
