--- a/Documentation/01_Robot arm setup.ipynb
+++ b/Documentation/01_Robot arm setup.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "source": [
-    "### Design a 3D simple robot arm model from scratch\n",
+    "## Design a 3D simple robot arm model from scratch\n",
     "\n",
     "ROS and MoveIt require our robotic arm model files to be in URDF. The Unified Robotic Description Format (URDF) is an XML file format used in ROS to describe all elements of a robot. It lists all the kinematic properties of the links and joints in a chain from base to tip. And we are going to visualize each step on RViz. ROS also accepts .xacro files which are very similar to urdf and are easier to write.\n",
     "\n",
@@ -225,13 +225,64 @@
    ]
   },
   {
-   "source": [],
+   "source": [
+    "### Controller in Gazebo\n",
+    "Once we have created the robotic arm model, we are going to build a controller to use it in Gazebo environment. On this step we are going to use, Joint State Publisher, that will publish the joints so the simulation is easier and we know the current position of the robot. And Gazebo Controller plugin, to control the robot movements. \n",
+    "\n",
+    "First of all, we need to create a launch file named \"arm_gazebo.launch\", that contains different nodes from different packages. We want this file to launch de Gazebo world and show our 3D robot model. "
+   ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "### Generate URDF model file from SolidWorks\n",
+    "<launch>\n",
+    "<!-- First we reload our model with an empty world on Gazebo -->\n",
+    "    <param name=\"robot_description\" textfile=\"$(find custom_robotic_arm)/urdf/simple_arm.urdf\"/>\n",
+    "    <include file=\"$(find gazebo_ros)/launch/empty_world.launch\" />\n",
+    "    <node name=\"spawn_urdf\" pkg=\"gazebo_ros\" type=\"spawn_model\" args=\"-param robot_description -urdf -model luqman_bot\"    />\n",
+    "    <rosparam file =\"$(find custom_robotic_arm)/config/controller.yaml\"/>\n",
+    "    <node name= \"controller_spawner\" pkg= \"controller_manager\" type=\"spawner\" args=\"\n",
+    "    arm_controller\"/>\n",
+    "    <node name=\"robot_state_publisher\" pkg=\"robot_state_publisher\" type=\"robot_state_publisher\"/> \n",
+    "</launch>"
+   ]
+  },
+  {
+   "source": [
+    "However, we are going to have some problems. Any robot in Gazebo needs a proper control transmission. So, we need to create transmissions and actuators in the joints of the robot. We go back to the \"simple_arm.urdf\" file, and we will define the transmission and actuators for each joint.\n",
+    "Here it is an example of a transmission for one joint. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "<!-- We define the simple transmissions on the first joint -->\n",
+    "<transmission name =\"Trans_1\">\n",
+    "    <type>transmission_interface/SimpleTransmission</type>\n",
+    "    <joint name=\"One_joint\">\n",
+    "        <hardwareInterface>PositionJointInterface</hardwareInterface>\n",
+    "    </joint>\n",
+    "    <!-- Defining the actuator on the first joint, using position interface-->\n",
+    "    <actuator name=\"Motor1\">\n",
+    "        <hardwareInterface>PositionJointInterface</hardwareInterface>\n",
+    "        <mechanicalReduction>1</mechanicalReduction>\n",
+    "    </actuator>\n",
+    "</transmission>"
+   ]
+  },
+  {
+   "source": [
+    "## Generate URDF model file from SolidWorks\n",
     "Fortunately, due to a few talented ROS developers, there exists a convenient plugin in Solidworks to export our assembly in URDF format.\n",
     "\n",
     "Assuming you have your model completely set up as a SolidWorks assembly, we now use the SolidWorks to URDF Exporter: http://wiki.ros.org/sw_urdf_exporter\n",
