--- a/Documentation/01_Robot arm setup.ipynb
+++ b/Documentation/01_Robot arm setup.ipynb
@@ -88,7 +88,12 @@
     "\n",
     "Syncronise the repository in your local computer\n",
     "\n",
-    "Create the src folder and compile the workspace"
+    "Create the src folder and compile the workspace.\n",
+    "\n",
+    "We can create an arm model in three different ways:\n",
+    " - From scratch\n",
+    " - From SolidWorks\n",
+    " - From an existing package in ROS"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -278,6 +283,245 @@
     "        <mechanicalReduction>1</mechanicalReduction>\n",
     "    </actuator>\n",
     "</transmission>"
+   ]
+  },
+  {
+   "source": [
+    "For any robot we need a controller, so we need a Gazebo plugin that controls the transmission and actuations, and another one that publish states, defining all the joints. We come back to \"simple_arm.urdf\", and we write the following command. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "<gazebo>\n",
+    "<!-- Defining control package of Gazebo -->\n",
+    "    <plugin name=\"control\" filename=\"libgazebo_ros_control.so\"/>\n",
+    "</gazebo>\n",
+    "<gazebo>\n",
+    "<!-- Plugin that publish states -->\n",
+    "<plugin name=\"joint_state_publisher\" filename=\"libgazebo_ros_joint_state_publisher.so\">\n",
+    "        <jointName>One_joint, Two_joint, Three_joint, Four_joint</jointName>\n",
+    "    </plugin>\n",
+    "</gazebo>"
+   ]
+  },
+  {
+   "source": [
+    "After that we need to create a controller. We will name the file \"controller.yaml\" and save it in a new folder named \"config\". This controller is a joint trajectory controller."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arm_controller:\n",
+    "  type: \"position_controllers/JointTrajectoryController\"\n",
+    "  joints:\n",
+    "    - One_joint\n",
+    "    - Two_joint\n",
+    "    - Three_joint\n",
+    "    - Four_joint"
+   ]
+  },
+  {
+   "source": [
+    "To observe if the robot looks fine, we will write the following command:"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roslaunch custom_robotic_arm arm_gazebo.launch"
+   ]
+  },
+  {
+   "source": [
+    "If we call \"rostopic list\", we will see a controller which provides as to control the simulation in Gazebo. \n",
+    "\n",
+    "(After applying the next command, run \"roscore\" to avoid some problems)\n",
+    "\n",
+    "On the topic list there is a arm controller command that will move the robot simulation. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rostopic pub /arm_controller/command trajectory_msgs/JointTrajectory '{joint_names:[\"One_joint\",\"Two_joint\",\"Three_joint,\"Four_joint\"],points:[{positions:[0.1,-0.5,0.5,0.75],time_from_start:[1,0] }]}'"
+   ]
+  },
+  {
+   "source": [
+    "Depending on the values of positions, the movement will be different. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "In Gazebo we have seen real world simulation, in RViz we see what a robot sees. Thanks to the plugin of joint_state_publisher, that publish all the current state of the joints. First, we need to open rviz. Then on the 'Displays' bar, select \"base_link\" on 'Fixed Frame'. After that, click on the botton 'Add', and select 'RobotModel' (visualize the robot) and TF (to see the current state of each joint). "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Controller for Real World Applications with Move-it\n",
+    "\n",
+    "To start the MoveIt Setup Assistant:"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roslaunch moveit_setup_assistant setup_assistant.launch"
+   ]
+  },
+  {
+   "source": [
+    "\n",
+    "Follow the \"Moveit Setup Assistant\" Tutorial to create the moveit_config package for the panda robot arm\n",
+    "\n",
+    "http://docs.ros.org/en/melodic/api/moveit_tutorials/html/doc/setup_assistant/setup_assistant_tutorial.html\n",
+    "\n",
+    "You have now the panda_moveit_config package properly installed\n",
+    "\n",
+    "Carefully:\n",
+    "- Choose the robot model created on the previous sections, \"simple_arm.urdf\".\n",
+    "- Generate Collision Matrix\n",
+    "- Add the links and joints \"Planning groups\"\n",
+    "- Generate a new folder named \"moveit_arm\", next to the custom_robotic_arm folder. \n",
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roslaunch moveit_arm demo.launch"
+   ]
+  },
+  {
+   "source": [
+    "You can make the robot do some random movements. On the section 'MotionPlanning', in the tab 'Planning', you can select a random goal state. You 'Plan' the movement, and then 'Execute'. Then, you see the robot start to move. \n",
+    "\n",
+    "Now we are going to make a synchronization between Moveit and Gazebo. Get that when we plan a movement in the robot, it does the same in the real world. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "We create a file \"controller.yaml\" on the 'config' folder. That will we the controller that we built in Gazebo configuration and that MoveIt can use it. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "controller_manager_ns: /\n",
+    "controller_list:\n",
+    "  - name: arm_controller\n",
+    "    action_ns: follow_joint_trajectory\n",
+    "    type: FollowJointTrajectory\n",
+    "    joints:\n",
+    "      - One_joint\n",
+    "      - Two_joint\n",
+    "      - Three_joint\n",
+    "      - Four_joint"
+   ]
+  },
+  {
+   "source": [
+    "Now, we need to change the file \"luqman_bot_moveit_controller_manager.launch.xml\". It is going to use the controller in Gazebo and link it with the Moveit one. Thanks to that, when we move the robot in Moveit, it will move in Gazebo also. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "<launch>\n",
+    "    <param name =\"moveit_controller_manager\"\n",
+    "    value=\"moveit_simple_controller_manager/MoveItSimpleControllerManager\"/>\n",
+    "    <param name=\"controller_manager_name\" value=\"/\" />\n",
+    "    <param name=\"use_controller_manager\" value=\"true\" />\n",
+    "  \n",
+    "    <rosparam file=\"$(find moveit_arm)/config/controller.yaml\" />\n",
+    "\n",
+    "</launch>"
+   ]
+  },
+  {
+   "source": [
+    "FInally, we create a new file named \"Final.launch\". That control the robot on both simulations programs. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "<launch>\n",
+    "    <include file=\"$(find custom_robotic_arm)/launch/arm_gazebo.launch\" />\n",
+    "    <include file=\"$(find moveit_arm)/launch/move_group.launch\" />\n",
+    "    <include file=\"$(find moveit_arm)/launch/moveit_rviz.launch\" >\n",
+    "        <arg name=\"config\" value=\"True\" />\n",
+    "    </include>\n",
+    "</launch>"
+   ]
+  },
+  {
+   "source": [
+    "When we run it, both programs will open, and when we plan some movement in MoveIt, it will be repeated on Gazebo. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roslaunch moveit_arm Final.launch"
    ]
   },
   {
