--- a/Documentation/01_Robot arm setup.ipynb
+++ b/Documentation/01_Robot arm setup.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "source": [
-    "## Create the Robot arm model\n",
+    "## 1.Create the Robot arm model\n",
     "\n",
     "First of all, we create a \"arm_kinematics_ws\" where we will install the packages:\n",
     "- robot_description package: where the URDF model of robotic arm is located. This URDF file is created from scratch or obtained from a SolidWorks plugin\n",
