--- a/Documentation/01_Robot arm setup.ipynb
+++ b/Documentation/01_Robot arm setup.ipynb
@@ -84,9 +84,9 @@
     "- robot_description package: where the URDF model of robotic arm is located. This URDF file is created from scratch or obtained from a SolidWorks plugin\n",
     "- robot kinematics control package: the moveit_config package\n",
     "\n",
-    "Create a new repository \"arm_kinematics_ws\" in your github\n",
+    "Create a new repository \"arm_kinematics_ws\" in your github.\n",
     "\n",
-    "Syncronise the repository in your local computer\n",
+    "Syncronise the repository in your local computer.\n",
     "\n",
     "Create the src folder and compile the workspace.\n",
     "\n",
